--- a/content/references.bib
+++ b/content/references.bib
@@ -149,3 +149,11 @@
   author={Redacted},
   year={2015}
 }
+
+@book{gallego2019,
+  place={New York},
+  title={Revenue Management and Pricing Analytics},
+  publisher={Springer},
+  author={Gallego, Guillermo and Topaloglu, Huseyin},
+  year={2019}
+}
