--- a/content/linear-algebra/1.Rmd
+++ b/content/linear-algebra/1.Rmd
@@ -11,16 +11,16 @@ bibliography: references.bib
 Disclaimer: None of the values used represent real-world examples.
 {{% /notice %}}
 
-## Designing a System of Linear Equations {#problem}
+## Designing a System of Linear Equations
 
 How exactly is linear algebra a key component in many optimization and 
 statistics problems? The answer is solving the title of this section. 
-In most optimization problems, we want to find the **best** way to allocate
+In most optimization problems, we want to find the best way to allocate
 resources to accomplish a goal. Not the largest/smallest nor longest/shortest
-way, but **optimal.** In this example, a freight rail company wants to transport 
-commodities $(x_1, x_2, x_3)$ from one place to another while maximizing profits. 
-However, they can't transport entire inventories of each commodity at once due 
-to **constraints (limitations, conditions, or restrictions):**
+way, but an **optimal solution.** In this example, a freight rail company wants 
+to transport commodities $(x_1, x_2, x_3)$ from one place to another while 
+maximizing profits. However, they can't transport entire inventories of each 
+commodity at once due to **constraints (limitations, conditions, or restrictions):**
 
 * An order of commodities $x_1, x_2,$ and $x_3$ weigh 1, 2, and 3 tons respectively 
 as the locomotive weight capacity is 1,250 tons. 
@@ -105,17 +105,6 @@ Disclaimer: Pay extra attention in this section as many problems in OR involve
 some form of matrix multiplication.
 {{% /notice %}}
 
-```{python}
-np.random.seed(1234)
-
-A = np.matrix(np.random.randint(20, size = (10, 3)))
-B = np.matrix(np.random.randint(20, size = (3, 5)))
-
-print(A)
-print(B)
-np.matmul(A, B)
-```
-
 Matrix multiplication isn't as straightforward as regular multiplication due to 
 several conditions: 
 
@@ -123,13 +112,27 @@ several conditions:
 * The total rows from the final Matrix $C$ must equal the total rows in Matrix $A$
 * The total columns from the final Matrix $C$ must equal the total columns in Matrix $B$
 
-Unlike normal multiplication, **matrix multiplication doesn't multiply by corresponding 
-element position i.e. $A_{2, 1} \times B_{2, 1}$.** Rather, the elements in the 
-final matrix are based on **the sum product of corresponding rows and columns.** 
-In other words, to find $C_{2, 3}$, you multiply $A_{2, n}$ (the entire 2nd row) 
-by $B_{m, 3}$ (the entire 3rd column). The reasoning: **linear combinations.** 
+In layman terms, an $m \times n$ matrix and an $n \times p$ matrix results in
+an $m \times p$ matrix. Because the order of the matrices matter, matrix 
+multiplication isn't "commutative." If you tried to perform matrix 
+multiplication with the matrices in a different order, an $n \times p$ matrix an 
+$m \times n$ matrix results in an $n \times n$ matrix. To simplify this:
+$AB = C \neq BA = C$. When finding the elements in $C$, they're based on 
+**dot product.** 
+
+```{python}
+np.random.seed(1234)
+
+A = np.random.randint(20, size = (10, 3))
+B = np.random.randint(20, size = (3, 5))
+
+print(A)
+print(B)
+np.matmul(A, B)
+```
 
 \begin{align}
+  A_{2,1}B_{1,3} + A_{2,2}B_{2,3} + \dots + A_{2,n}B_{m,3} & = C_{2,3} \\
   \begin{bmatrix}
     12 & 15 & 17
   \end{bmatrix} 
@@ -138,23 +141,10 @@ by $B_{m, 3}$ (the entire 3rd column). The reasoning: **linear combinations.**
     19 \\
     17
   \end{bmatrix} = 
-  12(11) + 15(19)+17(17) = 706
+  12(11) + 15(19)+17(17) & = 706 
 \end{align}
 
-### Transposing a Matrix 
-
-\begin{align}
-A = 
-  \begin{bmatrix}
-    1 & 2 & 3 \\
-    4 & 5 & 6
-  \end{bmatrix} \leftrightarrow A' = A^T =
-  \begin{bmatrix}
-    1 & 4 \\
-    2 & 5 \\
-    3 & 6
-  \end{bmatrix}
-\end{align}
+Essentially, **matrix multiplication is a set of linear combinations.**
 
 ## Solving a System of Linear Equations
 
@@ -165,7 +155,7 @@ elementary row operations (EROs). For example, if I wanted to get rid of $x_1$ i
 2nd equation, I'd replace the 2nd equation by the sum of multiplying the 1st equation 
 by -2 and the 2nd equation itself. You do this repeatedly until an equation has a 
 single unknown. The final matrix after conducting EROs and back substitution 
-leaves it in **reduced echelon form (REF).**
+leaves it in **row echelon form (REF).**
 
 \begin{align}
   \left[\begin{array}{@{}ccc|c@{}}
@@ -236,29 +226,48 @@ def eroLEQ(matrix, constraints):
 eroLEQ(A, b)
 ```
 
-## Objective Function
+## Using Gurobi
 
-\begin{align}
-\text{Maximize} ~ .01x_1 + .05x_2 + .03x_3 ~~ \text{(Freight Rates)}
-\end{align}
-
-```{python}
-obj_coeffs = [.01, .05, .03]
-np.multiply(obj_coeffs, eroLEQ(A, b))
+```{python, echo = F}
+from gurobipy import *
 ```
 
-The objective function is subject to linear equality and inequality constraints 
-in order to maximize/minimize some value. The solution above is one of many 
-**feasible solutions** if you were looking to calculate profit. Referring to the 
-[problem] from before, based on freight rates of each commodity (by cent per ton-mile), 
-we generated a total profit of \$15.50 subject to the constraints at hand. By putting 
-together our objective function and constraints, we have the framework of a standard 
-OR model:
+```{python}
+T = Model("Commodity")
 
-\begin{align}
-  \text{Maximize} ~ .01x_1 + .05x_2 + .03x_3 ~ s.t. \\
-  x_1 + 2x_2 + 3x_3 & = 1250 \\
-  2x_1 + x_2 + 4x_3 & = 1800 \\
-  x_2 + x_3 & = 300 \\
-  x_1, x_2, x_3 \geq 0
-\end{align}
+x1 = T.addVar(name="Coal")
+x2 = T.addVar(name="Intermodal")
+x3 = T.addVar(name="Agricultural")
+
+T.setObjective(.01*x1 + .03*x2 + .04*x3, GRB.MAXIMIZE)
+
+T.addConstr(1*x1 + 2*x2 + 3*x3 == 1250, "Weight")
+T.addConstr(2*x1 + 1*x2 + 4*x3 == 1800, "Capacity")
+T.addConstr(1*x2 + 1*x3 == 300, "Mixture")
+
+T.optimize()
+
+for i in T.getVars():
+  print(f'{i.varName}: {i.x}.')
+  
+print(f'Optimal total revenue: {T.objVal}.')
+```
+
+## Terminology
+
+* **Optimal Solution:** Any feasible solution that maximizes/minimizes the objective value.
+* **Constraints**: Restrictions on the quantities of decision variables 
+available.
+* **Decision Variables:** Variables whose quantities affect the objective value 
+in a decision-making process.
+* **Dot Product:** The multiplication of two vectors with the same number of elements.
+* **Row Echelon Form (REF):** According to @margalit_rabinoff_2019, a matrix is in REF if:
+  + All nonzero rows are above rows of all 0s.
+  + The leading nonzero entry of a row is to the *right* of the 1st nonzero entry of the row above.
+  + Below the pivot, all entries are 0.
+* **Reduced Row Echelon Form (RREF):** According to @margalit_rabinoff_2019, a 
+matrix is in RREF if it is in REF and:
+  + The pivot is equal to 1.
+  + The pivot is the *only* nonzero entry in its column.
+  
+## References
