--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -9,11 +9,11 @@ title: Home
 bibliography: references.bib
 ---
 
-# The Techdoc is a Hugo Theme for technical documentation
+# Background Information
 
 For those who aren't familiar with operations research (OR), OR is the mathematical
 modeling used to find the best solution out of many to support better decision
-making. @gass_assad_2005 dates the prominence of OR back to its military origins 
+making. The prominence of OR back to its military origins 
 during WWI and WWII. Scientists worked with the British Royal Navy, the 
 British Royal Air Force (RAF), the British Admiralty, and the US Armed Forces to 
 accomplish notable feats such as:
@@ -52,30 +52,25 @@ tools.
 
 [^2]: @halvorsen_2020 would be the best book to pick up Python for mathematical applications.
 
-[^3]: Gurobi has a [quick start guide]().
+[^3]: Gurobi has a [quick start guide](Gurobi Optimizer Quick Start Guide V9.0.pdf).
 
 ## Target Audience
 
-While the contents of this site will be written in an academic context, the 
-main audience is for current and future practitioners. In other words, anyone
-who stumbled upon this site through a search engine. This isn't only about 
-getting a job done but more so of having the "what else can I do with this" mindset. 
-That's how innovation comes to fruition; applying the same tools to different
-things and experimenting. For instance, there's plenty of research done on airline
-routing but what about ships or drones? The goal at hand is so that a high school 
-graduate at minimum could unleash their creativity with operations research at 
-their disposal.
-
-## Topics Covered
-
-* Linear Algebra: @bert_tsit1997, @margalit_rabinoff_2019, @halvorsen_2020, @Yoshida2021
-* Linear Programming: @bert_tsit1997, @winston_2004, @kruk2018, @halvorsen_2020
-* Integer Programming: @winston_2004, @kruk2018, @syndershen2019
-* Nonlinear Programming: @winston_2004
-* Stochastic Programming: @winston_2004, @syndershen2019
-* Forecasting: @winston_2004, @syndershen2019, @hanck2020, @hyndman_athanasopoulos_2021
-* Dynamic Programming, Queuing Theory, and Simulations: @winston_2004, @halvorsen_2020
-* Combinatorial Optimization: @syndershen2019
-* Probability and Statistics: @discover2012, @syndershen2019, @hyndman_athanasopoulos_2021, @kochenderfer2021
+The assumption is that the reader is familiar with calculus[^4], linear algebra[^5], and
+statistics[^6]. Nonetheless, anyone who stumbled upon this site through a search engine 
+will be able to pick the content up. This isn't merely about getting a job done 
+but more so of having the "what else can I do with this" mindset. That's how 
+innovation comes to fruition; applying the same tools to different things and 
+experimenting. For instance, there's plenty of research done on airline routing 
+but what about ships or drones? The goal at hand is so that a high school graduate 
+at minimum could unleash their creativity with operations research at their disposal.
 
 ## References
+
+[^4]: @stewart2016 for covering calculus I-III.
+
+[^5]: @strang2016 for covering linear algebra.
+
+[^6]: [Penn State Statistics Online](online.stat.psu.edu/statprogram) for covering 
+probability and statistics.
+
