--- a/content/references.bib
+++ b/content/references.bib
@@ -14,41 +14,12 @@
 	author={Winston, Wayne L.}, 
 	year={2004}} 
 
-@book{gass_assad_2005, 
-  place={New York}, 
-  title={An Annotated Timeline of Operations Research: An Informal History}, 
-  publisher={Kluwer Academic Publishers}, 
-  author={Gass, Saul I. and Assad, Arjang}, 
-  year={2005}}  
-  
-@book{discover2012,
-  place={California},
-  title={Discovering Statistics Using {R}},
-  publisher={SAGE Publications},
-  author={Field, Andy and Miles, Jeremy and Field, Zoe},
-  year={2012}}
-  
-@book{Yoshida2021,
-  place={Florida},
-  title={Linear Algebra and its Applications with {R}},
-  publisher={Taylor and Francis},
-  author={Yoshida, Ruriko},
-  year={2021}
-}
-
 @book{halvorsen_2020, 
   place={Norway}, 
   title={Python for Science and Engineering}, 
   publisher={Halvorsen}, 
   author={Halvorsen, Hans-Peter}, 
   year={2020}}
-
-@book{patty_2015, 
-  place={New York}, 
-  title={Handbook of Operations Research Applications at Railroads}, 
-  publisher={Springer}, 
-  author={Patty, Bruce W.}, 
-  year={2015}}
   
 @book{hyndman_athanasopoulos_2021, 
   place={Australia}, 
@@ -57,13 +28,6 @@
   publisher={OTexts}, 
   author={Hyndman, Rob J. and Athanasopoulos, George}, 
   year={2021}}
-  
-@book{margalit_rabinoff_2019, 
-  place={Georgia}, 
-  title={Interactive Linear Algebra}, 
-  publisher={Georgia Tech}, 
-  author={Margalit, Dan and Rabinoff, Joseph},
-  year={2019}}
   
 @book{syndershen2019,
   place={New Jersey},
@@ -80,14 +44,6 @@
   publisher={MIT Press},
   author={Kochenderfer, Mykel J. and Wheeler, Tim A. and Wray, Kyle H.},
   year={2021}
-}
-
-@book{bert_tsit1997,
-  place={New Hampshire},
-  title={Introduction to Linear Optimization},
-  publisher={Athena Scientific},
-  author={Bertsimas, Dimitris and Tsitsiklis, John N.},
-  year={1997}
 }
 
 @book{kruk2018,
@@ -107,15 +63,6 @@
   year={2013}
 }
 
-@book{varian2014,
-  place={New York},
-  edition={9th},
-  title={Intermediate Microeconomics: A Modern Approach},
-  publisher={Norton},
-  author={Varian, Hal R.},
-  year={2014}
-}
-
 @book{hanck2020,
   place={Germany},
   title={Introduction to Econometrics with {R}},
@@ -124,31 +71,6 @@
   year={2020}
 }
 
-@book{mankiw1992,
-  place={New York},
-  edition={3rd},
-  title={Macroeconomics},
-  publisher={Worth Publishers},
-  author={Mankiw, N. Gregory},
-  year={1992}
-}
-
-@book{varian1992,
-  place={New York},
-  edition={3rd},
-  title={Microeconomic Analysis},
-  publisher={Norton},
-  author={Varian, Hal R.},
-  year={1992}
-}
-
-@book{minn2014,
-  place={New York},
-  title={Principles of Marketing},
-  publisher={University of Minnesota Libraries Publishing},
-  author={Redacted},
-  year={2015}
-}
 
 @book{gallego2019,
   place={New York},
@@ -156,4 +78,22 @@
   publisher={Springer},
   author={Gallego, Guillermo and Topaloglu, Huseyin},
   year={2019}
+}
+
+@book{stewart2016,
+  place={Massachusetts},
+  edition={8th},
+  title={Calculus: Early Transcendentals},
+  publisher={Cengage},
+  author={Stewart, James},
+  year={2016}
+}
+
+@book{strang2016,
+  place={Massachusetts},
+  edition={5th},
+  title={Introduction to Linear Algebra},
+  publisher={Wellesley-Cambridge Press},
+  author={Strang, Gilbert},
+  year={2016}
 }
